[package]
name = "autovor"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
chrono = "0.4.22"
clap = { version = "4.0.10", features = ["derive"] }
color-eyre = "0.6.2"
inquire = "0.3.0"
once_cell = "1.15.0"
reqwest = { git = "https://github.com/thomasqueirozb/reqwest", branch = "base_url_check", features = ["cookies"] }
scraper = "0.13.0"
tokio = { version = "1", features = ["rt-multi-thread", "macros"] }

[profile.release]
opt-level = "z"
strip = true
lto = true
