[package]
name = "autovor"
version = "0.1.0"
edition = "2021"

description = "Unofficial CLI for Endeavor"
repository = "https://github.com/thomasqueirozb/autovor"
readme = "README.md"
license = "AGPL-3.0"

categories = ["command-line-utilities"]
keywords = ["endeavor", "cli"]

[dependencies]
chrono = "0.4.22"
clap = { version = "4.0.22", features = ["derive"] }
color-eyre = "0.6.2"
csv = "1.1.6"
inquire = "0.5.2"
once_cell = "1.16.0"
reqwest = { git = "https://github.com/thomasqueirozb/reqwest", branch = "base_url_check", features = ["cookies"] }
reqwest_cookie_store = { git = "https://github.com/thomasqueirozb/reqwest_cookie_store" }
scraper = "0.13.0"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
tokio = { version = "1", features = ["rt-multi-thread", "macros"] }

[profile.release]
opt-level = "z"
strip = true
lto = true
